<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="64dp"
        >
        <include
            android:id="@+id/appBarLayout"
            layout="@layout/home_appbar_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_asset_name"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            />
        <Spinner
            android:id="@+id/selectAssetNameSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_name"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/receiverNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receiver_name"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/textColor"
            android:background="@color/white"
            android:layout_marginHorizontal="12dp"
            android:paddingVertical="12dp"
            android:textSize="12sp"
            android:paddingHorizontal="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receiver_location"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/textColor"
            android:background="@color/white"
            android:layout_marginHorizontal="12dp"
            android:paddingVertical="12dp"
            android:textSize="12sp"
            android:paddingHorizontal="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asset_capacity"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/assetCapacityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/asset_capacity_hint"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/textColor"
            android:background="@color/white"
            android:layout_marginHorizontal="12dp"
            android:paddingVertical="12dp"
            android:textSize="12sp"
            android:inputType="phone"
            android:paddingHorizontal="12dp"
            />
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textAllCaps="false"
            android:paddingHorizontal="48dp"
            android:paddingVertical="12dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="24dp"
            />
    </LinearLayout>



</ScrollView>