<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/orderIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:layout_marginStart="12dp"
            android:layout_marginVertical="12dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_name"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/assetNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_name"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_capacity"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/assetCapacityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_capacity"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/orderLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_location"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:layout_marginTop="24dp"
            android:paddingBottom="24dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginStart="12dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/orderStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginStart="18dp"
                android:textStyle="bold"
                />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>