<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.VerifyUserActivity"
    >

    <TextView
        android:id="@+id/verifyCodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_code"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorPrimary"
        />

    <LinearLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/verifyCodeTitle"
        app:layout_constraintBottom_toTopOf="@id/verifyCodeButton"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/phoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/phoneNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/textColor"
            android:background="@color/white"
            android:layout_marginHorizontal="12dp"
            android:paddingVertical="12dp"
            android:textSize="12sp"
            android:paddingHorizontal="12dp"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel"
            app:layout_constraintStart_toStartOf="@id/phoneNumberLabel"
            />

    </LinearLayout>

    <include
        android:id="@+id/otpCodeLayout"
        layout="@layout/six_digit_otp_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/verifyCodeTitle"
        app:layout_constraintBottom_toTopOf="@id/verifyCodeButton"
        app:layout_constraintVertical_bias="0.6"
        />
    <Button
        android:id="@+id/verifyCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp"
        android:textAllCaps="false"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verifyCodeTitle"
        app:layout_constraintVertical_bias="0.6"
        />

</androidx.constraintlayout.widget.ConstraintLayout>