<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.HistoryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <include
            android:id="@+id/appBarLayout"
            layout="@layout/home_appbar_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_history_to_show"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            />
        <LinearLayout
            android:id="@+id/currentOrdersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_orders"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/currentOrdersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout"
                android:layout_marginTop="12dp"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/asset_item_view_layout"
                android:paddingBottom="84dp"
                android:clipChildren="false"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pastOrdersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentOrdersLayout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_orders"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pastOrdersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout"
                android:layout_marginTop="12dp"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/asset_item_view_layout"
                android:paddingBottom="84dp"
                android:clipChildren="false"
                />
        </LinearLayout>
    </LinearLayout>



</ScrollView>